--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@
     --tie-col: rgb(192, 115, 192);
 
     --text-col: white;
+
+    --border-thickness: 11px;
 }
 
 body {
@@ -14,11 +16,11 @@ body {
     fill: var(--text-col);
 }
 
-.tic-tac-toe * {
+#tic-tac-toe * {
     /* border: 1px solid red; */
 }
 
-.tic-tac-toe {
+#tic-tac-toe {
     width: 500px;
     height: 600px;
     display: grid;
@@ -28,25 +30,28 @@ body {
     column-gap: 20px;
 }
 
-.tic-tac-toe .player-tab:nth-of-type(1) {
+#tic-tac-toe .player-tab:nth-of-type(1) {
     grid-area: p1;
-    border: 11px solid var(--text-col);
-    border-bottom: none;
 }
 
-.tic-tac-toe .player-tab:nth-of-type(2) {
+#tic-tac-toe .player-tab:nth-of-type(2) {
     grid-area: p2;
-    border: 11px solid var(--text-col);
-    border-bottom: none;
 }
 
-.tic-tac-toe .player-tab {
+#tic-tac-toe .player-tab {
     border-radius: 1rem 1rem 0 0;
     padding: 0.5rem;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
+    border: var(--border-thickness) solid var(--text-col);
+    border-bottom: none;
+    position: relative;
+    top: var(--border-thickness);
+}
 
+.inactive-player {
+    z-index: -1;
 }
 
 .player-tab .name {
@@ -66,27 +71,30 @@ body {
     grid-area: 2 / 1 / 2 / 2;
 }
 
-.tic-tac-toe .player-1 {
+#tic-tac-toe .player-1 {
     background-color: var(--p1-col);
 }
 
-.tic-tac-toe .player-2 {
+#tic-tac-toe .player-2 {
     background-color: var(--p2-col);
 }
 
-.tic-tac-toe .board-container {
+#tic-tac-toe .board-container {
     border: 11px solid var(--text-col);
-    border-top: none;
     grid-area: board;
     padding: 20px;
     border-radius: 0 0 1rem 1rem;
 }
 
-.tic-tac-toe .board {
+#tic-tac-toe .board {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
 }
 
-.tic-tac-toe .cell {
+#tic-tac-toe .cell {
     align-content: center;
+}
+
+.cell svg {
+    pointer-events: none;
 }
